--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "strapi-plugin-multi-select": "^1.2.3",
+    "strapi-plugin-react-icons": "^0.3.1",
     "styled-components": "5.3.3"
   },
   "author": {
