--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "5.3.4",
     "strapi-plugin-multi-select": "^1.2.3",
     "strapi-plugin-react-icons": "^0.3.1",
+    "strapi-plugin-vercel-deploy": "^1.4.0",
     "styled-components": "5.3.3"
   },
   "author": {
